add login to firebase

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Anonymous Vote Machine",
   "main": "index.js",
   "dependencies": {
+    "firebase": "^4.5.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
